Se cambia cadena de conexión a base de datos local

--- a/src/Presentation.WebApp/appsettings.json
+++ b/src/Presentation.WebApp/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=im01.database.windows.net;Initial Catalog=db;Persist Security Info=True;User ID=AdminDb;Password=><bTBy.k!%]wk7Y5",
-    "IdentityDbContextConnection": "Data Source=im01.database.windows.net;Initial Catalog=db;Persist Security Info=True;User ID=AdminDb;Password=><bTBy.k!%]wk7Y5"
+    "DefaultConnection": "SERVER=DESKTOP-GUSKUDA;DATABASE=db;integrated security=True",
+    "IdentityDbContextConnection": "SERVER=DESKTOP-GUSKUDA;DATABASE=db;integrated security=True"
   },
   "Smtp": {
     "Host": "smtp.office365.com",
