--- a/src/Presentation.WebApp/Presentation.WebApp.csproj
+++ b/src/Presentation.WebApp/Presentation.WebApp.csproj
@@ -41,4 +41,6 @@
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
