Se agrega ServicioSmtpCorreo y IServicioSmtpCorreo

--- a/src/Application/Services/Application.csproj
+++ b/src/Application/Services/Application.csproj
@@ -10,6 +10,10 @@
     <ProjectReference Include="..\..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Notifications\" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
