Refactorizzación de CitasController y ServicioCita

--- a/src/Presentation.WebApp/appsettings.json
+++ b/src/Presentation.WebApp/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "SERVER=DESKTOP-GUSKUDA;DATABASE=db;integrated security=True",
-    "IdentityDbContextConnection": "SERVER=DESKTOP-GUSKUDA;DATABASE=db;integrated security=True"
+    "DefaultConnection": "SERVER=Alfredo;DATABASE=db;integrated security=True",
+    "IdentityDbContextConnection": "SERVER=Alfredo;DATABASE=db;integrated security=True"
   },
   "Smtp": {
     "Host": "smtp.office365.com",
